# coinref.io

./: .gitignore  Cargo.toml  README.md  build.sh  database.sql  deploy.sh  error-log.sh  nukedb.sh  serve.sh
data/: ACT.templar  ADA.templar  AST.templar  BNT.templar  BOS.templar  BTC.templar  BTO.templar  COB.templar  CPX.templar  DCT.templar  EDO.templar  EOS.templar  ETC.templar  ETH.templar  FSN.templar  GAS.templar  HOLO.templar  ICX.templar  IOTA.templar  KCASH.templar  LSK.templar  MIOTA.templar  NANO.templar  NEM.templar  NEO.templar  NULS.templar  ONT.templar  REQ.templar  SC.templar  SONM.templar  SPHTX.templar  STEEM.templar  SUB.templar  VEN.templar  VIBE.templar  VTC.templar  WAN.templar  WTC.templar  XBY.templar  XEM.templar  (+5 more)
fetch/: Cargo.toml
fetch/src/: main.rs
migrations/2018-01-16-131645_create_coins/: down.sql  up.sql
migrations/2018-01-17-021801_add_coin_tags/: down.sql  up.sql
scripts/: push.sh  watch.sh
seed/: Cargo.toml
seed/src/: main.rs
src/: controllers.rs  error.rs  import.rs  lib.rs  main.rs  models.rs  render_templar.rs  schema.rs  separator.rs  template.rs  views.rs
src/modelsnew/: coin.rs  mod.rs
static/: icomoon.eot  style.css
styles/: _settings.sass  style.sass
styles/lib/: _grid.sass  _layout.sass  _reset.sass  _responsive.sass  _typography.sass
styles/modules/: _coin.sass  _tag.sass
styles/theme/: _icons.sass  _layout.sass  _lists.sass  _typography.sass
tasks/: Cargo.toml
tasks/src/: main.rs
