[workspace]
members = ["tasks"]

[package]
name = "coinref"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]

[dependencies]
iron = "0.6"
router = "*"
staticfile = "*"
mount = "*"
templar = { git = "https://github.com/robsaunders/templar" }
# templar = { path = "../templar" }
horrorshow = "*"
toml = "*"
serde = "*"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["sqlite", "large-tables"] }
rusqlite = "0.13"
regex = "0.2"
coinmarketcap = { git = "https://github.com/robsaunders/coinmarketcap-rs" }
# coinmarketcap = { path = "../coinmarketcap-rs" }

# [target.x86_64-unknown-linux-musl]
# linker = "x86_64-linux-musl-gcc"

[lib]
doc = false

[[bin]]
name = "coinref"
doc = false

[[bin]]
name = "coinref-import"
path = "src/import.rs"
doc = false
