[workspace]
members = ["seed", "tasks"]

[package]
name = "coinref"
version = "0.1.0"
authors = ["Rob Saunders <rob@wearebrandnew.com>"]

[dependencies]
iron = "0.6"
router = "*"
staticfile = "*"
mount = "*"
templar = { git = "https://github.com/robsaunders/templar" }
horrorshow = "*"
toml = "*"
serde = "*"
serde_derive = "1.0"
rusqlite = "0.13"
regex = "0.2"

# [target.x86_64-unknown-linux-musl]
# linker = "x86_64-linux-musl-gcc"

[lib]
doc = false

[[bin]]
name = "coinref"
doc = false
